force-app/main/default/objects/Crypto_Account__c/Crypto_Account__c.object-meta.xml
<CustomObject>
    <label>Crypto Account</label>
    <nameField>
        <label>Crypto Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crypto Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>