force-app/main/default/objects/Crypto_Account__c/fields/CoinGeckoAPIName__c.field-meta.xml
<CustomField>
    <fullName>CoinGeckoAPIName__c</fullName>
    <label>CoinGecko API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 