force-app/main/default/objects/Crypto_Account__c/fields/Connected_Blockchains__c.field-meta.xml
<CustomField>
    <fullName>Connected_Blockchains__c</fullName>
    <label>Connected Blockchains</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blockchains</valueSetName>
    </valueSet>
</CustomField> 