force-app/main/default/objects/Crypto_Account__c/fields/ConnectWallet__c.field-meta.xml
<CustomField>
    <fullName>ConnectWallet__c</fullName>
    <label>Connect Crypto Account</label>
    <type>Text</type>
    <formula>
        IF(
            OR(
                ISBLANK(Connected_Blockchains__c),
                AND(ISBLANK(Wallet_Address__c), ISBLANK(Master_Public_Key__c))
            ),
            HYPERLINK(
                $CustomMetadata.Mukn_Setting__mdt.Default.MuKnWeb3CA_AppUrl__c +
                '/salesforce/organization/' + $Organization.Id + '/crypto-account/' + Id,
                'Connect Wallet'
            ),
            'Crypto Account Connected'
        )
    </formula>
    <inlineHelpText>Field represents a link to connect your wallet if not yet connected. If wallet is connected (either Wallet Address or Master Public Key is set, and Connected Blockchains is not blank), field will display confirmation text.</inlineHelpText>
</CustomField> 