force-app/main/default/objects/Crypto_Account__c/fields/Master_Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Master_Public_Key__c</fullName>
    <description>Master Public Key for HD Wallets (xpub, ypub, or zpub). Used for Heuristically Determined (HD) Wallets to derive UTXO Addresses.</description>
    <label>Master Public Key</label>
    <length>160</length>
    <type>Text</type>
</CustomField> 