force-app/main/default/objects/Crypto_Account__c/fields/Wallet_Address__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Address__c</fullName>
    <label>Wallet Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 