force-app/main/default/objects/Crypto_Account__c/validationRules/Only_One_Wallet_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Wallet_Type</fullName>
    <active>true</active>
    <description>Only one wallet type can be connected at a time (either Wallet Address or Master Public Key, not both).</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Wallet_Address__c)),
  NOT(ISBLANK(Master_Public_Key__c))
)</errorConditionFormula>
    <errorMessage>Only one wallet type can be connected at a time. Please provide either a Wallet Address or a Master Public Key, not both.</errorMessage>
</ValidationRule> 