force-app/main/default/objects/Crypto_Account__c/validationRules/Require_Blockchains_When_Connected.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Blockchains_When_Connected</fullName>
    <active>true</active>
    <description>Connected Blockchains must be set if Wallet Address or Master Public Key is set (but not both).</description>
    <errorConditionFormula>AND(
  ISBLANK(Connected_Blockchains__c),
  OR(
    AND(
      NOT(ISBLANK(Wallet_Address__c)),
      ISBLANK(Master_Public_Key__c)
    ),
    AND(
      ISBLANK(Wallet_Address__c),
      NOT(ISBLANK(Master_Public_Key__c))
    )
  )
)</errorConditionFormula>
    <errorMessage>Please select at least one blockchain when connecting a wallet address.</errorMessage>
</ValidationRule> 